--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
-    "styled-components": "5.3.3"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "@types/styled-components": "^5.1.23",
     "typescript": "4.4.2"
   },
   "scripts": {
