--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "@types/styled-components": "^5.1.23",
     "typescript": "4.4.2"
   },
   "scripts": {
